samples/_failures_safe/1761173323_f545fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fd68c68.c: In function ‘analyze_text’:
./samples/SAFE/__tmp_0fd68c68.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
